# AI-Car-Price-Prediction

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  car_price_model_info.joblib  car_price_model_manual_columns.json  docker-compose.prod.yml  docker-compose.yml  environment.yml  main_api.py  nginx.conf  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_api.py  train_model.py
.github/workflows/: ci.yml  release.yml
data/: car_price.ipynb
docs/: API.md  DEPLOYMENT.md
frontend/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/: Background3D.tsx  CarPredictionForm.tsx  FormField.tsx  Header.tsx  ImageBackground.tsx  ParticleBackground.tsx  PredictionResult.tsx  ThreeBackground.tsx
models/: car_price_model.joblib
scripts/: run_tests.py  setup_dev.py  setup_frontend.py
src/: __init__.py
src/api/: __init__.py  app.py  main_api.py
src/car_prediction/: main.py
src/car_prediction/models/: train_model.py
src/models/: __init__.py  train_model.py
src/utils/: __init__.py
tests/: __init__.py  test_main.py
