[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "car-price-prediction"
version = "1.0.0"
description = "A machine learning API for predicting sports car prices"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["machine learning", "car prices", "fastapi", "prediction", "sports cars"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "pydantic>=2.11.0",
    "scikit-learn==1.5.1",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "joblib>=1.3.0",
    "requests>=2.28.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "six>=1.17.0",
    "packaging>=24.2",
    "scipy>=1.16.1",
    "threadpoolctl>=3.6.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/car-price-prediction"
Documentation = "https://github.com/yourusername/car-price-prediction#readme"
Repository = "https://github.com/yourusername/car-price-prediction.git"
"Bug Tracker" = "https://github.com/yourusername/car-price-prediction/issues"

[project.scripts]
car-price-api = "car_prediction.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.joblib"]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
